# 5-final-charlot

./: .gitignore  .pylintrc  Pipfile  README.md  do-app.yaml  docker-compose.yml  env.example  pipfile  pyproject.toml
.github/workflows/: backend-ci.yml  deploy-service.yml  deploy-web.yml  deploy.yml
app/: __init__.py  auth.py  config.py  db.py  deps.py  main.py  models.py
app/pages/: dashboard.py  home.py  upload.py
app/routers/: auth_routes.py  chat_routes.py  session_routes.py  upload_routes.py
app/tests/: conftest.py  test_auth.py  test_session_chat.py
backend/: requirements.txt
backend/app/: auth.py  config.py  db.py  deps.py  main.py  models.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_session_chat.py
frontend/: app_routers_page_routes.py  chat.html  dashboard.html  index.html  login.html  register.html  upload.html
frontend/templates/: base.html  chat.html  dashboard.html  index.html  login.html  register.html  upload.html
service/: .env.example  Dockerfile  Pipfile  main.py  run.sh
service/agents/: __init__.py  explainer.py  orchestrator.py  reasoner.py  retriever.py  state.py
service/api/: main.py
service/evaluation/: __init__.py  metrics.py
service/pages/: chat.py
service/prompts/: __init__.py  explainer_prompts.py  reasoner_prompts.py  retriever_prompts.py
service/utils/: __init__.py  cuad_loader.py  data_loader.py  embeddings.py  vectorstore.py
templates/: chat.html
web-app/: Dockerfile  models.py  pipfile  pyproject.toml
web-app/app/: .pylintrc  __init__.py  auth.py  config.py  db.py  deps.py  main.py  (+1 more)
(+22 files in other folders)
